--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Klee+One&family=Playpen+Sans:wght@100..800&family=Schoolbell&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
+<script src="https://kit.fontawesome.com/3fd6f10c39.js" crossorigin="anonymous"></script>    
+<meta charset="UTF-8">
     <meta name="viewport" content="an educational website made for teachers, parents, and students on how to learn creatively">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-     <link rel="stylesheet" href="/sources/style.css">
-     <title>Educational Creativity-A website made by Melissa Waldinger showcasing apps made for teachers, students, and parents.</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Klee+One&family=Playpen+Sans:wght@100..800&family=Schoolbell&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="/sources/style.css">
+     <title>Educational Creativity | A website made by Melissa Waldinger showcasing apps made for teachers, students, and parents.</title>
 </head>
 <body>
-    <h1 class="m-5 text-center">Helloooo</h1>
+    <div class="hero">
+    <p class="top-welcome">WELCOME TO</p>
+    <h1>Educational Creativity</h1>
+    <hr>
+    <h4> a playground designed for teachers, students, and parents.</h4>
+    <img src="/images/creative-classroom-students.jpg" class="main-classroom-img" alt="a classroom setting where students are doing a hands-on activity using bells">
+</div>
+
+
 </body>
 </html>
