checking code for responsiveness

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="container">
     <div class="row mb-10">
-        <div class="col d-none d-lg-block"><img src="/images/teacher-reading.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-md-block"><img src="/images/teacher-reading.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
         <div class="col">
             <div class="user-description">
@@ -44,12 +44,12 @@
                 <button class="app-button">Learn more</button>
             </div>
         </div> 
-        <div class="col d-none d-lg-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-md-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
     </div>
 
      <div class="row mb-10">
-        <div class="col d-none d-lg-block"><img src="/images/pexels-julia-m-cameron-4145354.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-md-block"><img src="/images/pexels-julia-m-cameron-4145354.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
         <div class="col">
             <div class="user-description">
