updating responsiveness for mobile devices

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://kit.fontawesome.com/3fd6f10c39.js" crossorigin="anonymous"></script>    
 <meta charset="UTF-8">
-    <meta name="viewport" content="an educational website made for teachers, parents, and students on how to learn creatively">
+    <meta name="viewport" content="an educational website made for teachers, parents, students on how to learn creatively">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +24,7 @@
 
 <div class="container">
     <div class="row mb-10">
-        <div class="col d-none d-md-block"><img src="/images/teacher-reading.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-lg-block"><img src="/images/teacher-reading.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
         <div class="col">
             <div class="user-description">
@@ -44,12 +44,12 @@
                 <button class="app-button">Learn more</button>
             </div>
         </div> 
-        <div class="col d-none d-md-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-lg-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
     </div>
 
      <div class="row mb-10">
-        <div class="col d-none d-md-block"><img src="/images/pexels-julia-m-cameron-4145354.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-lg-block"><img src="/images/pexels-julia-m-cameron-4145354.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
         <div class="col">
             <div class="user-description">
