added new images and fine tuned some css. added the about me page and html

--- a/about.html
+++ b/about.html
@@ -26,25 +26,25 @@
 <div class="about-container">
     <div class="row about-sections">
         <div class="col-md-3">
-            <img src="/images/teacher-portrait-1.jpg" class="about-img"  alt="a female teacher and math advisor">
+            <img src="/images/teacher-portrait-1.jpg" class="about-img img-fluid"  alt="a female teacher and math advisor">
             <div class="about-heading">Math <br class="d-none d-lg-block "/>Advisor</div>
             <div class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
 
             <div class="col-md-3">
-            <img src="/images/teacher-portrait-2.jpg" class="about-img"  alt="a female teacher and creative advisor">
+            <img src="/images/teacher-portrait-2.jpg" class="about-img img-fluid"  alt="a female teacher and creative advisor">
             <div class="about-heading">Creative <br class="d-none d-lg-block"/>Advisor</div>
             <div class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
 
             <div class="col-md-3">
-            <img src="/images/teacher-portrait-3.jpg" class="about-img"  alt="a male teacher and literacy advisor">
+            <img src="/images/teacher-portrait-3.jpg" class="about-img img-fluid"  alt="a male teacher and literacy advisor">
             <div class="about-heading">Literacy <br class="d-none d-lg-block"/> Advisor</div>
             <div class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
 
             <div class="col-md-3">
-            <img src="/images/finance.jpg" class="about-img"  alt="a male teacher and science advisor">
+            <img src="/images/finance.jpg" class="about-img img-fluid"  alt="a male teacher and science advisor">
             <div class="about-heading">Science <br class="d-none d-lg-block"/> Advisor</div>
             <div class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
         </div>
