--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <p class="top-welcome">WELCOME TO</p>
     <h1 class="hero-h1">Educational Creativity</h1>
     <hr>
-    <h4 class="hero-h4"> a playground designed for teachers, students, and parents.</h4>
+    <h4 class="hero-h4">a playground designed for teachers, students, and parents</h4>
     <img src="/images/creative-classroom-students.jpg" class="main-classroom-img" alt="a classroom setting where students are doing a hands-on activity using bells">
 </div>
 
 
 <div class="container">
     <div class="row mb-10">
-        <div class="col d-none d-lg-block"><img src="/images/teacher-reading.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-lg-block"><img src="/images/teacher-reading.jpg" class="img-fluid app-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
         <div class="col">
             <div class="user-description">
                 <h2 class="app-headings">Teachers</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button">Learn more</button>
+                <button class="app-button"><a href="/work.html">Learn more</a></button>
             </div>
         </div>
     </div>
@@ -41,28 +41,28 @@
             <div class="user-description">
                 <h2 class="app-headings">Students</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button">Learn more</button>
+                <button class="app-button"><a href="/work.html">Learn more</a></button>
             </div>
         </div> 
-        <div class="col d-none d-lg-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-lg-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid app-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
     </div>
 
      <div class="row mb-10">
-        <div class="col d-none d-lg-block"><img src="/images/pexels-julia-m-cameron-4145354.jpg" class="img-fluid teacher-img" alt="a teacher reading to student who are sitting on the floor">
+        <div class="col d-none d-lg-block"><img src="/images/pexels-julia-m-cameron-4145354.jpg" class="img-fluid app-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
         <div class="col">
             <div class="user-description">
                 <h2 class="app-headings">Parents</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-               
+                <button class="app-button"><a href="/work.html">Learn more</a></button>
             </div>
         </div>
     </div>
 
 </div>
 
- <button class="app-button">Learn more</button>
+
 
 </body>
 </html>
