Finished the work page and styling, fine-tuning, and responsive

--- a/work.html
+++ b/work.html
@@ -19,16 +19,7 @@
 <div class="app-display-container">
     <div class="row">
         <div class="col-md-6"><img src="/images/teacher-app.jpg" class="img-fluid work-app-img d-none d-lg-block" alt="a preview for an app for teachers"></div>
-        <div class="col-md-6 teacher-app-description">
-        <div class="work-app-headings pb-2"> The teacher app that does it all!</div>
-        <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
-   </div> </div>
-</div>
-
-<div class="app-display-container-left">
-    <div class="row">
-        <div class="col-md-6"><img src="/images/student-app.PNG" class="img-fluid work-app-img d-none d-lg-block" alt="a preview for an app for teachers"></div>
-        <div class="col-md-6 teacher-app-description">
+        <div class="col-md-6 work-app-description">
         <div class="work-app-headings pb-2"> The teacher app that does it all!</div>
         <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
    </div> </div>
@@ -36,9 +27,18 @@
 
 <div class="app-display-container">
     <div class="row">
+        <div class="col-md-6"><img src="/images/student-app.PNG" class="img-fluid work-app-img d-none d-lg-block" alt="a preview for an app for teachers"></div>
+        <div class="col-md-6 work-app-description">
+        <div class="work-app-headings pb-2"> The student app that engages the brain!</div>
+        <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
+   </div> </div>
+</div>
+
+<div class="app-display-container">
+    <div class="row">
         <div class="col-md-6"><img src="/images/parent-app.png" class="img-fluid work-app-img d-none d-lg-block" alt="a preview for an app for teachers"></div>
-        <div class="col-md-6 teacher-app-description">
-        <div class="work-app-headings pb-2"> The teacher app that does it all!</div>
+        <div class="col-md-6 work-app-description">
+        <div class="work-app-headings pb-2"> The parent app that keeps you in the loop!</div>
         <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
    </div> </div>
 </div>
