Added and styled navbar

--- a/work.html
+++ b/work.html
@@ -13,6 +13,30 @@
      <title>Educational Creativity | Apps</title>
 </head>
 <body>
+    <div class="nav-container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Educational Creativity</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work.html">Apps</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+
     <div class="container">
     <h4 class="mt-20">Apps designed for each aspect of learning</h4>
 
@@ -22,7 +46,8 @@
         <div class="col-md-6 work-app-description">
         <div class="work-app-headings pb-2"> The teacher app that does it all!</div>
         <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
-   </div> </div>
+            <button class="work-page-button" href="#">Teacher App</button>
+    </div> </div>
 </div>
 
 <div class="app-display-container">
@@ -31,7 +56,8 @@
         <div class="col-md-6 work-app-description">
         <div class="work-app-headings pb-2"> The student app that engages the brain!</div>
         <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
-   </div> </div>
+        <button class="work-page-button" href="#">Student App</button>
+    </div> </div>
 </div>
 
 <div class="app-display-container">
@@ -40,7 +66,8 @@
         <div class="col-md-6 work-app-description">
         <div class="work-app-headings pb-2"> The parent app that keeps you in the loop!</div>
         <div class="work-app-content"> Whether you’re juggling a bustling K12 classroom or guiding college students through complex concepts, we all know teaching isn’t just about delivering lessons. It’s about keeping things organized, sparking engagement, and making the most of every minute without burning out. </div>
-   </div> </div>
+            <button class="work-page-button" href="#">Parent App</button>
+    </div> </div>
 </div>
 </div>
 </div>
