--- a/about.html
+++ b/about.html
@@ -14,6 +14,31 @@
 </head>
 
 <body>
+
+        <div class="nav-container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Educational Creativity</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work.html">Apps</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+
     <div class="hero-about">
     <h1 class="hero-h1">Educational Creativity</h1>
     <hr>
