--- a/index.html
+++ b/index.html
@@ -13,6 +13,31 @@
      <title>Educational Creativity | A website made by Melissa Waldinger showcasing apps made for teachers, students, and parents.</title>
 </head>
 <body>
+
+        <div class="nav-container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html">Educational Creativity</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work.html">Apps</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+</div>
+
     <div class="hero">
     <p class="top-welcome">WELCOME TO</p>
     <h1 class="hero-h1">Educational Creativity</h1>
@@ -30,7 +55,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Teachers</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button"><a href="/work.html">Learn more</a></button>
+                <button class="app-button"><a href="work.html">Learn more</a></button>
             </div>
         </div>
     </div>
@@ -41,7 +66,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Students</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button"><a href="/work.html">Learn more</a></button>
+                <button class="app-button"><a href="work.html">Learn more</a></button>
             </div>
         </div> 
         <div class="col d-none d-lg-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid app-img" alt="a teacher reading to student who are sitting on the floor">
@@ -55,7 +80,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Parents</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button"><a href="/work.html">Learn more</a></button>
+                <button class="app-button"><a href="work.html">Learn more</a></button>
             </div>
         </div>
     </div>
