--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Teachers</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button"><a href="work.html">Learn more</a></button>
+                <button class="app-button" href="work.html" >Learn more</button>
             </div>
         </div>
     </div>
@@ -66,7 +66,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Students</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button"><a href="work.html">Learn more</a></button>
+                <button class="app-button" href="work.html">Learn more</button>
             </div>
         </div> 
         <div class="col d-none d-lg-block"><img src="/images/pexels-cdc-library-3992949.jpg" class="img-fluid app-img" alt="a teacher reading to student who are sitting on the floor">
@@ -80,7 +80,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Parents</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button"><a href="work.html">Learn more</a></button>
+                <button class="app-button" href="work.html">Learn more</button>
             </div>
         </div>
     </div>
