--- a/work.html
+++ b/work.html
@@ -31,6 +31,9 @@
         <li class="nav-item">
           <a class="nav-link" href="work.html">Apps</a>
         </li>
+             <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact Us</a>
+        </li>
       </ul>
     </div>
   </div>
