--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="https://kit.fontawesome.com/3fd6f10c39.js" crossorigin="anonymous"></script>    
+   
 <meta charset="UTF-8">
+
     <meta name="viewport" content="an educational website made for teachers, parents, students on how to learn creatively">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -11,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Klee+One&family=Playpen+Sans:wght@100..800&family=Schoolbell&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/sources/style.css">
      <title>Educational Creativity | A website made by Melissa Waldinger showcasing apps made for teachers, students, and parents.</title>
+ <script src="https://kit.fontawesome.com/3fd6f10c39.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -50,7 +52,7 @@
 </div>
 
 
-<div class="container">
+<div class="index-container">
     <div class="row mb-10">
         <div class="col d-none d-lg-block"><img src="/images/teacher-reading.jpg" class="img-fluid app-img" alt="a teacher reading to student who are sitting on the floor">
         </div>
@@ -58,7 +60,7 @@
             <div class="user-description">
                 <h2 class="app-headings">Teachers</h2>
                 <p class="app-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="app-button" href="work.html" >Learn more</button>
+                <button class="app-button" href="work.html">Learn more</button>
             </div>
         </div>
     </div>
@@ -88,6 +90,25 @@
         </div>
     </div>
 
+
+<footer><a href="mailto:contact@educationalcreativity.io" class="email-link d-flex justify-content-center" target="_blank">contact@educationalcreativity.io</a>
+<div class="social-links d-flex justify-content-center">
+    <a href="https://www.instagram.com/geteducationalcreativity">
+       <i class="fa-brands fa-instagram"></i>
+    </a>
+    
+    <a href="https://www.facebook.com/educationalcreativity">
+        <i class="fa-brands fa-facebook-f"></i>
+    </a>
+    
+    <a href="https://www.github.com/melissawaldinger">
+        <i class="fa-brands fa-github"></i>
+    </a>
+</div>
+
+
+
+</footer>
 </div>
 
 
