--- a/about.html
+++ b/about.html
@@ -26,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="index.html" title="Educational Creativity-Homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="about.html">About</a>
+          <a class="nav-link active" aria-current="true" href="about.html" title="Educational Creativity-About Page">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="work.html">Apps</a>
+          <a class="nav-link" href="work.html" title="Educational Creativity-App Page">Apps</a>
         </li>
              <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="contact.html" title="Educational Creativity-Contact Page">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -79,5 +79,7 @@
         </div>
     </div>
 
-    <button class="contact-button m-20 p-10">Contact Us</button>
+    <button class="contact-button m-20 p-10"><a href="contact.html">Contact Us</a></button>
+
+   
 </div>
