--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="true" href="index.html" title="Educational Creativity-Homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html" title="Educational Creativity-About Page">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="work.html">Apps</a>
+          <a class="nav-link" href="work.html" title="Educational Creativity-App Page">Apps</a>
         </li>
              <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="contact.html" title="Educational Creativity-Contact Page">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -91,17 +91,18 @@
     </div>
 
 
-<footer><a href="mailto:contact@educationalcreativity.io" class="email-link d-flex justify-content-center" target="_blank">contact@educationalcreativity.io</a>
+<footer>
+  <a href="mailto:contact@educationalcreativity.io" class="email-link d-flex justify-content-center" target="_blank">contact@educationalcreativity.io</a>
 <div class="social-links d-flex justify-content-center">
-    <a href="https://www.instagram.com/geteducationalcreativity">
+    <a href="https://www.instagram.com/geteducationalcreativity" title="Instagram Profile">
        <i class="fa-brands fa-instagram"></i>
     </a>
     
-    <a href="https://www.facebook.com/educationalcreativity">
+    <a href="https://www.facebook.com/educationalcreativity" title="Facebook Profile">
         <i class="fa-brands fa-facebook-f"></i>
     </a>
     
-    <a href="https://www.github.com/melissawaldinger">
+    <a href="https://www.github.com/melissawaldinger" title="Github Profile">
         <i class="fa-brands fa-github"></i>
     </a>
 </div>
