--- a/work.html
+++ b/work.html
@@ -23,16 +23,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="true" href="index.html" title="Educational Creativity-Homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="about.html" title="Educational Creativity-About Page">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="work.html">Apps</a>
+          <a class="nav-link active" aria-current="true" href="work.html" title="Educational Creativity-App Page">Apps</a>
         </li>
              <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Us</a>
+          <a class="nav-link" href="contact.html" title="Educational Creativity-Contact Page">Contact Us</a>
         </li>
       </ul>
     </div>
