fixed more links and improved the visual appeal of the website

--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,13 @@
 
 <div class="contact-container">
     <h3>Email</h3>
-    <p><a href="mailto:contact@educationalcreativity.io" target="_blank">contact@educationalcreativity.io</a></p>
+    <p><a href="mailto:contact@educationalcreativity.io" target="_blank" class="contact-link">contact@educationalcreativity.io</a></p>
     <br>
     <h3>X</h3>
-    <p><a href="https://www.x.com/educationalcreativity" target="_blank">@educationalcreativity</a></p>
+    <p><a href="https://www.x.com/educationalcreativity" target="_blank" class="contact-link">@educationalcreativity</a></p>
     <br>
     <h3>Instagram</h3>
-    <p><a href="https://www.instagram.com/geteducationalcreativity" target="_blank">@geteducationalcreativity
+    <p><a href="https://www.instagram.com/geteducationalcreativity" target="_blank" class="contact-link">@geteducationalcreativity
     </a></p>
 </div>
 
