after testing user experience-added target blank to social links

--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
 <footer>
   <a href="mailto:contact@educationalcreativity.io" class="email-link d-flex justify-content-center" target="_blank">contact@educationalcreativity.io</a>
 <div class="social-links d-flex justify-content-center">
-    <a href="https://www.instagram.com/geteducationalcreativity" title="Instagram Profile">
+    <a href="https://www.instagram.com/geteducationalcreativity" title="Instagram Profile" target="_blank">
        <i class="fa-brands fa-instagram"></i>
     </a>
     
-    <a href="https://www.facebook.com/educationalcreativity" title="Facebook Profile">
+    <a href="https://www.facebook.com/educationalcreativity" title="Facebook Profile" target="_blank">
         <i class="fa-brands fa-facebook-f"></i>
     </a>
     
-    <a href="https://www.github.com/melissawaldinger" title="Github Profile">
+    <a href="https://www.github.com/melissawaldinger" title="Github Profile" target="_blank">
         <i class="fa-brands fa-github"></i>
     </a>
 </div>
